fix Web page and Z-index

--- a/src/app/views/components/standalones/navbar/navbar.scss
+++ b/src/app/views/components/standalones/navbar/navbar.scss
@@ -6,7 +6,6 @@
 	justify-content: space-between;
 	box-sizing: border-box;
 	padding-inline: 20px;
-	z-index: 2;
 	top: 0;
 	color: var(--primary-color-50);
 	height: var(--nav-height);
@@ -15,8 +14,7 @@
 		rgba(254, 57, 57, 1) 0%,
 		rgba(148, 8, 8, 1) 100%
 	);
-
-	z-index: 46;
+	z-index: 5;
 
 	&-logo {
 		display: flex;
