--- a/src/app/views/components/standalones/sidebar/sidebar.scss
+++ b/src/app/views/components/standalones/sidebar/sidebar.scss
@@ -4,7 +4,7 @@
 	justify-content: flex-start;
 	height: 100dvh;
 	position: fixed;
-	z-index: 1;
+	z-index: 4;
 	top: 0;
 
 	padding-block-start: calc(var(--nav-height) + 28px);
@@ -18,8 +18,6 @@
 	transition: background, color, border;
 	transition-duration: 500ms;
 	transition-timing-function: linear;
-
-	z-index: 45;
 
 	a {
 		display: flex;
